# ping-cash

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  commitlint.config.js  docker-compose.yml  domain_ranking_full.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: anchor.yml  asc-agreement-probe.yml  asc-attach-build.yml  asc-check-build.yml  asc-cleanup-and-verify.yml  asc-deep-diagnostic.yml  asc-deliver-metadata.yml  asc-diag.yml  asc-expire-build.yml  asc-fetch-crashes.yml  asc-fetch-testflight-feedback.yml  asc-force-invite.yml  asc-invite-tester.yml  asc-list-users.yml  asc-pilot-upload.yml  asc-promote-internal.yml  asc-pull-maestro-video.yml  asc-recreate-internal.yml  asc-set-build-notes.yml  bootstrap-asc.yml  build.yml  ci.yml  corridor-smoke.yml  ios-resign-upload.yml  ios.yml  treasury-fund.yml  web-build.yml
.husky/: pre-push
.playwright-mcp/: page-2026-05-23T09-16-36-938Z.yml  page-2026-05-23T09-30-10-232Z.yml  page-2026-05-23T09-48-48-099Z.yml  page-2026-05-23T10-13-18-752Z.yml  page-2026-05-23T10-13-41-700Z.yml  page-2026-05-23T10-14-03-200Z.yml  page-2026-05-23T10-14-24-582Z.yml
apps/mobile/: .env.devnet  .gitignore  README.md  app.json  entry.js  metro.config.js  package.json
apps/mobile/.maestro/: 00-all.yaml  01-launch.yaml  02-signin.yaml  02-signup-screen-renders.yaml  03-tabs.yaml  04-send-screen.yaml  cashin-screen.yaml  receive-toggle.yaml  send-token-toggle.yaml  swap-screen.yaml  vault-screen.yaml
apps/mobile/app/: _layout.tsx  cashin.tsx  index.tsx  receive.tsx  send.tsx  signup.tsx  swap.tsx  transfer-detail.tsx  verify.tsx
apps/mobile/components/: RootErrorBoundary.tsx
apps/mobile/fastlane/: Appfile  (+1 more)
apps/web/: Containerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json
apps/web-claim/: Dockerfile  next.config.js  package.json
docs/: API.md  ARCHITECTURE.md  BUSINESS-STRATEGY.md  BUSINESS.md  CASHFLOW.md  COMPETITORS.md  DATABASE.md  DEV-ENVIRONMENT.md  DOD.md  FLOWS.md  GLOSSARY.md  MAINNET-READINESS.md  NFR.md  PRINCIPLES.md  ROADMAP.md  RUNBOOKS.md  SECURITY.md  SRE.md  STATUS.md  STRATEGY.md
docs/adr/: 0001-stablecoin-rails-on-solana.md  0002-istio-service-mesh.md  0003-cap-database-split.md  0004-privy-mpc-wallets.md  0005-transfi-primary-offramp.md  0006-deployment-via-openova-sovereign.md  0007-multi-token-receive-via-jupiter.md  0008-ping-tokenomics.md  0009-pomm-internal-swap.md  0010-welcome-stake.md  0011-kyc-shared-service.md  0012-earn-vault.md  0013-tier-and-clawback.md  0014-entity-structure.md  0015-phased-launch-ping-points-to-token.md  0016-fx-cost-covering-pricing.md  0017-custody-model.md  0018-anchor-scaffolds-do-not-deploy.md  0019-transfer-claim-bridge-and-reconciler.md  0020-pillar-4-send-side-unsigned-tx-pattern.md  0021-anchor-scaffold-safety-patterns.md  0022-cashin-transfi-only.md  0023-gcc-cashin-via-rain.md  0024-cashin-three-method-architecture.md  0025-smart-routing-cashin-architecture.md  0026-usd-only-cashin-via-onramper.md  README.md
docs/archive/: 2026-05-21-domain-search-results.csv  README.md
docs/ledger/: TRACKER.md  TRUST.md
docs/lessons-learned/: README.md
docs/proposals/: README.md
docs/research/: 2026-05-30-20provider-omr-usd-final.md  2026-05-30-corridor-facts.md  2026-05-30-onramp-provider-scorecard.md  2026-05-30-transfi-api-sweep.md  2026-05-31-comprehensive-devnet-test-plan.md
docs/runbooks/: 2026-05-24-phase2-toolchain-build-verify.md  README.md
docs/sessions/: 2026-05-21-rebrand-and-doc-consolidation.md  2026-05-24-mech-4-sweep-retrospective.md  2026-05-24-phase2-preaudit-sprint.md  2026-05-29-coverage.md
docs/store/: PRIVACY-POLICY.md  STORE-LISTING.md  SUBMISSION-CHECKLIST.md
docs/walks/: 2026-05-23-auth-walk-transcript.md  2026-05-23-ledger-pillar-walk.md  2026-05-23-mobile-pillar-walk.md  2026-05-23-six-services-walk.md  2026-05-23-transfer-pillar-walk.md  2026-05-23-user-pillar-walk.md  2026-05-23-wallet-pillar-walk.md
platform/auth/: Chart.yaml  DESIGN.md  values.yaml
platform/claim/: Chart.yaml  values.yaml
platform/compliance/: Chart.yaml  values.yaml
platform/fx/: Chart.yaml  values.yaml
platform/gamification/: Chart.yaml  values.yaml
platform/ledger/: Chart.yaml  values.yaml
platform/notify/: Chart.yaml  values.yaml
platform/offramp/: Chart.yaml  values.yaml
platform/token/: Chart.yaml  values.yaml
platform/transfer/: Chart.yaml  values.yaml
platform/user/: Chart.yaml  DESIGN.md  values.yaml
platform/wallet/: Chart.yaml  values.yaml
platform/web-claim/: Chart.yaml  values.yaml
products/bp-ping/: README.md  blueprint.yaml
programs/earn-vault/: Cargo.toml  README.md
programs/earn-vault/src/: lib.rs
programs/internal-swap/: Cargo.toml  README.md
programs/internal-swap/src/: lib.rs
programs/ping-token/: Cargo.toml  README.md
programs/ping-token/src/: lib.rs
programs/pomm/: Cargo.toml  README.md
programs/pomm/src/: lib.rs
scripts/: check-doc-links.sh  deploy-devnet-programs.sh  init-mongo.js  init-postgres.sql  inject-vendor-keys.mjs  real-solana-sign.mjs  real-solana-walk.mjs  walk-devnet-programs.mjs  walk-full-corridor.mjs  walk-send-intent.mjs
services/auth/: Dockerfile  package.json  tsup.config.ts
services/claim/: Dockerfile  package.json  tsconfig.json
services/compliance/: Dockerfile  package.json
services/earn-vault/: .env.devnet  Dockerfile  package.json  tsup.config.ts
services/fx/: Dockerfile  package.json
services/gamification/: Dockerfile  package.json
services/ledger/: Dockerfile  entrypoint.sh  package.json  tsup.config.ts
services/notify/: Dockerfile  package.json
services/offramp/: Dockerfile  package.json  tsconfig.json
services/token/: Dockerfile  package.json  tsup.config.ts
services/transfer/: Dockerfile  entrypoint.sh  package.json  tsconfig.json  tsup.config.ts
services/user/: Dockerfile  entrypoint.sh  package.json
services/wallet/: Dockerfile  package.json  tsup.config.ts
tests/: earn-vault.ts  internal-swap.ts  ping-token.ts  pomm.ts
(+270 files in other folders)
