# Cargo workspace root for the 4 Anchor programs. Anchor.toml's
# [workspace.members] tracks program directories; this Cargo.toml gives
# us a single [patch.crates-io] surface that propagates to ALL programs
# + ensures shared dep resolution + a single Cargo.lock at the repo root.
#
# Per #61 + #62 audit-readiness: pinning transitive crypto deps so
# Solana 1.18.17's bundled cargo-build-sbf (Rust 1.75) can build the
# programs without hitting edition2024 errors on newer crates.

[workspace]
resolver = "2"
members = [
  "programs/earn-vault",
  "programs/internal-swap",
  "programs/pomm",
  "programs/ping-token",
]

# Pin solana-program to 1.18.17 (matches Solana CLI bundled with this
# build host). Latest 1.18.26 pulls blake3 1.8 → digest 0.11 → block-buffer
# 0.12 which requires edition2024 (not stabilized in Rust 1.75 / Solana
# 1.18's bundled cargo). 1.18.17 uses older edition2021-compatible deps.
[patch.crates-io]
solana-program = { git = "https://github.com/anza-xyz/agave.git", tag = "v1.18.17" }

# Anchor 0.30.1 mandates overflow-checks on release builds — prevents
# silent arithmetic wraparound in on-chain code, a common Solana audit
# finding class.
[profile.release]
overflow-checks = true
