[package]
name = "earn-vault"
version = "0.1.0"
description = "Ping Earn Vault — auto-stake USDC across Solana DeFi with 40/60 yield split"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
