[package]
name = "earn-vault"
version = "0.1.0"
description = "Ping Earn Vault — auto-stake USDC across Solana DeFi with 40/60 yield split"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []
# #22 HIGH #3 — structural harvest disable. Without this feature the
# harvest function body is just `err!()` and the real impl literally
# doesn't compile. Set ONLY after ADR 0012 adapter-CPI rebuild lands.
harvest-enabled = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
# Pin solana-program to 1.18.17 — Solana 1.18.26 (latest 1.18 patch)
# pulls blake3 1.8 → digest 0.11 → block-buffer 0.12 which requires
# edition2024 (not stabilized in Solana's bundled cargo 1.75). 1.18.17
# uses older edition2021-compatible deps. Same pin in internal-swap +
# pomm + ping-token.
solana-program = "=1.18.17"

