[package]
name = "earn-vault"
version = "0.1.0"
description = "Ping Earn Vault — auto-stake USDC across Solana DeFi with 40/60 yield split"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []
# #22 HIGH #3 — structural harvest disable. Without this feature the
# harvest function body is just `err!()` and the real impl literally
# doesn't compile. Set ONLY after ADR 0012 adapter-CPI rebuild lands.
harvest-enabled = []

[dependencies]
# #71: anchor 0.31.1 + solana-program 2.x. Unifies AccountInfo type
# with pyth-solana-receiver-sdk 1.0.1 (receiver-pattern Pyth SDK).
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
solana-program = "~2.1"

