[package]
name = "internal-swap"
version = "0.1.0"
description = "Ping internal swap — USDC ↔ $PING at fixed 0.3% spread each side"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "internal_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []
# #71: pyth-real feature gate REMOVED. anchor 0.31.1 + solana-program
# 2.x align with pyth-solana-receiver-sdk 1.0.1 (receiver-pattern, post-
# pull-oracle Pyth SDK) — real Pyth on every build, no cfg-gate.

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
solana-program = "~2.1"
# #71 + #62 H-04: Pyth price-feed via the receiver SDK. anchor-lang
# 0.31.1 + pyth-solana-receiver-sdk 1.0.1 share the same solana-program
# 2.x AccountInfo type, so no cfg-gate or type bridge needed.
pyth-solana-receiver-sdk = "=1.0.1"

