[package]
name = "ping-token"
version = "0.1.0"
description = "$PING SPL Token-2022 mint — initialize-only; vesting + emission via off-chain Streamflow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ping_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
