[package]
name = "ping-token"
version = "0.1.0"
description = "$PING SPL Token-2022 mint — initialize-only; vesting + emission via off-chain Streamflow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ping_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Pre-audit L-01 ADR 0018 guard: `mainnet-ready` is the gate to swap
# declare_id from the placeholder; it REQUIRES `audit-passed` which is
# only set after OtterSec audit completes. The compile_error! in src/lib.rs
# enforces this.
mainnet-ready = []
audit-passed = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
# Pin solana-program to 1.18.17 (same as other 3 programs) — avoids
# the blake3 1.8 → block-buffer 0.12 edition2024 wall on Solana 1.18's
# bundled cargo.
solana-program = "=1.18.17"

