[package]
name = "pomm"
version = "0.1.0"
description = "Ping Protocol-Owned Market Maker — single-sided USDC liquidity on Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pomm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
# #62 C-03 rebuild dep — Pyth read for on-chain EMA accumulator. Same
# patch-pinned version as internal-swap (a92e86f) for cross-program
# build reproducibility under audit.
pyth-sdk-solana = "=0.10.5"
