[package]
name = "pomm"
version = "0.1.0"
description = "Ping Protocol-Owned Market Maker — single-sided USDC liquidity on Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pomm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []
# Devnet builds default to OFF — update_ema returns a fixed mock EMA
# (mirrors internal-swap pyth-real feature). Avoids anchor-lang 0.30.1
# ↔ pyth-sdk-solana solana-program 1.x/2.x AccountInfo type split for
# devnet validation. Mainnet adds `pyth-real` to wire real Pyth.
pyth-real = ["dep:pyth-sdk-solana"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
# Pin solana-program to 1.18.17 — same rationale as internal-swap.
# solana-program 2.x split AccountInfo into a separate crate which
# conflicts with pyth-sdk-solana's expected type.
solana-program = "=1.18.17"
# #62 C-03 rebuild dep — Pyth read for on-chain EMA accumulator. Same
# patch-pinned version as internal-swap (a92e86f) for cross-program
# build reproducibility under audit.
pyth-sdk-solana = { version = "=0.10.6", optional = true }

