[package]
name = "pomm"
version = "0.1.0"
description = "Ping Protocol-Owned Market Maker — single-sided USDC liquidity on Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pomm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# L-01 ADR 0018 guard (mirrors ping-token): mainnet-ready requires audit-passed
mainnet-ready = []
audit-passed = []
# #71: pyth-real feature gate REMOVED. anchor 0.31.1 + solana-program
# 2.x align with pyth-solana-receiver-sdk 1.0.1.

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
solana-program = "~2.1"
# #71 + #62 C-03: Pyth on-chain EMA via receiver SDK.
pyth-solana-receiver-sdk = "=1.0.1"

